Fix expand collapse issue
- Fix expand collapse issue on material preview page

--- a/app/assets/stylesheets/web/search_materials.scss
+++ b/app/assets/stylesheets/web/search_materials.scss
@@ -373,8 +373,8 @@ span.clazz_count{padding-left:5px;font-style:italic;}
   z-index: 10;
   }
 .Expand_Collapse_share{width:74px;}
-.Expand_Collapse_preview{width:98px;font-size:10px;padding:4px;margin-left: -10px;}
-.preview_link{padding:3px;}
+.Expand_Collapse_preview{width:98px;font-size:10px;margin-left: -8px;}
+.preview_link{padding:6px;}
 .ss-fb{padding-top:8px;}
 .ss-tw{padding-top:7px;}
 .ss-li{padding-top:2px;}
